<resources>
    <string name="app_name">CST142</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_configure_locations">ConfigureLocationsActivity</string>
    <string name="btnnew">New</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="your_locations">Your locations:</string>
    <string name="configure_location">Configure Locations</string>
    <string name="navpointerDesc">Navigation pointer that points towards the selected location</string>
    <string name="distance">Distance:</string>
    <string name="metres">Metres</string>
    <string name="yards">Yards</string>
    <string name="title_activity_new_location">NewLocationActivity</string>
    <string name="name">Name:</string>
    <string name="namehint">Name</string>
    <string name="latitude">Longitude</string>
    <string name="latitudelbl">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="longitudehint">Longitude</string>
    <string name="getpositionbtn">Get current position</string>
    <string name="btnAddLocation">Add Location</string>
    <string name="title_activity_edit_location">EditLocationActivity</string>
    <string name="save">Save</string>
    <string name="latHeader">Latitude</string>
    <string name="longitudeHeader">Longitude</string>
</resources>
