<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.saskpolytech.cst142.NewLocationActivity"
    tools:showIn="@layout/activity_new_location">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/name"
        app:layout_constraintEnd_toStartOf="@+id/etName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/namehint"
        android:inputType="textPersonName"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="98dp"
        android:text="@string/latitudelbl"
        app:layout_constraintEnd_toStartOf="@+id/etLatitude"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <EditText
        android:id="@+id/etLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/latitude"
        android:inputType="numberSigned|numberDecimal"
        android:maxLength="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <TextView
        android:id="@+id/tvLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="65dp"
        android:text="@string/longitude"
        app:layout_constraintEnd_toStartOf="@+id/etLongitude"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/etLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/longitudehint"
        android:inputType="numberSigned|numberDecimal"
        android:maxLength="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLatitude" />

    <Button
        android:id="@+id/btnGetCurrentPos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_border"
        android:onClick="onGetCurrentLocation"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/getpositionbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLongitude" />

    <Button
        android:id="@+id/btnAddLoc"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:background="@drawable/button_border"
        android:onClick="onAddLocation"
        android:text="@string/btnAddLocation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
