<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.saskpolytech.cst142.ConfigureLocationsActivity"
    tools:showIn="@layout/activity_configure_locations">

    <ListView
        android:id="@+id/lvLocationList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="55dp"
        android:choiceMode="singleChoice"
        android:listSelector="@drawable/listview_selected"
        app:layout_constraintBottom_toTopOf="@+id/btnDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/button_border"
        android:onClick="onNewLocation"
        android:text="@string/btnnew"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_border"
        android:onClick="onDeleteLocation"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEdit"
        app:layout_constraintStart_toEndOf="@+id/btnNew" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_border"
        android:onClick="onEditLocation"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvLocationList"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/your_locations"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLatHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="150dp"
        android:text="@string/latHeader"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lvLocationList"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLongHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="55dp"
        android:text="@string/longitudeHeader"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lvLocationList"
        app:layout_constraintStart_toEndOf="@+id/tvLatHeader" />

</android.support.constraint.ConstraintLayout>
